name:                mp5-scheme
version:             0.1.0.0
synopsis:            Write a Scheme Interpreter
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable main
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -O2
    build-depends:      base , unordered-containers >= 0.2 , parsec
    default-language:   Haskell2010
